About: Fix profile image jump and make it overall better

--- a/features/About/_Template.scss
+++ b/features/About/_Template.scss
@@ -30,7 +30,7 @@
 
   .Template-profile {
     @include mq(xl) {
-      max-width: rem($space * 18);
+      max-width: rem($space * 20);
     }
   }
 
